--- a/lecture9.Rmd
+++ b/lecture9.Rmd
@@ -58,15 +58,16 @@ theme_set(theme_grey(base_size = 18))
 ## Debugging
 
 - Bugs are common (inevitable)
---
-
 - The more complex the code, the more bugs (and the harder to find them)
---
-
 - Debugging is the process of finding and fixing bugs.
---
-
 - Complemetary to **testing**, which is about identifying existence of bugs.
+
+</br>
+
+```{r debugging-image, echo =FALSE, fig.align = "right"}
+knitr::include_graphics("images/xkcd-debugging.png")
+```
+
 
 ---
 
@@ -94,8 +95,8 @@ gradient <- function(beta) {
 
 --
 
-A gradient descent implementation and other code for today are in a
-[source file](R/debugging.R).
+Gradient descent and Newton method implementations can be found in
+[`debugging.R`](R/debugging.R).
 
 ```{r source-debugging-file, cache=FALSE}
 source("R/debugging.R")
@@ -168,20 +169,29 @@ newton_method(c(0, 0), objective, gradient, hessian)
 
 ### Exercise: Debugging `newton_method()`
 
-- Downloading and open [`debugging.R`](R/debugging.R) in RStudio.
-- Create another script with the code from these slides simulating $X$ and $y$ and
-with the implementation of `objective()`, its gradient, and Hessian.
-- Source `debugging.R` and test that `gradient_descent()` works. Now try `newton_method()` and observe the error.
+- Download and open [`debugging.R`](R/debugging.R) in RStudio.
+--
+
+- Create another script and define `objective()`, `gradient()`, and `hessian()` by copying
+  from these slides.
+--
+
+- Source `debugging.R` and test that `gradient_descent()` works. Now try `newton_method()`. Oh no, there's an error!
+--
+
 - Insert a breakpoint before the `while` loop and inspect the values
   of `objective(x_new)`, `values`, `alpha`, `beta` and `grad_d_prod`
   from within the browser.
+--
+
 - Explain and fix the bug. Remove the breakpoint.
-- Source the fixed code and try evaluating the `newton_method()` call again. What happens?
-- Insert another breakpoint at a suitable place.
-- Explain and fix the bug. Remove the breakpoint.
-- Test that the `newton_method()` implementation now works.
-- Implement a `verbosity` option for the `newton_method()` that
-  prints values from within the function during iterations.
+--
+
+- Source the fixed code and try calling `newton_method()`. What happens?
+--
+
+- Debug the code again, using breakpoints or `browser()`. Finally
+  verify that `newton_method()` works.
 
 ???
 
@@ -452,7 +462,6 @@ Let $$p_j = \frac{\exp{(\theta_j)}}{\sum_{i = 1}^K \exp(\theta_i)}$$
 
 --
 
-
 .pull-left[
 Seems like a good idea! Constraints are automatically satisfied.
 
@@ -465,17 +474,13 @@ Seems like a good idea! Constraints are automatically satisfied.
 --
 
 .pull-right[
-```{r, echo = FALSE, fig.width = 5, fig.height = 5.2, warning = FALSE}
+```{r, echo = FALSE, fig.width = 5, fig.height = 5.4, warning = FALSE}
 other_negloglik <- function(theta, x) {
   theta <- c(theta, 0)
-
-  # -crossprod(theta, x) + sum(x) * log(1 + sum(exp(theta)))
 
   pC <- exp(theta[1]) / sum(exp(theta))
   pI <- exp(theta[2]) / sum(exp(theta))
   pT <- 1 / sum(exp(theta))
-
-  # TODO: This can improved by excplitly working out math
 
   p_dark <- pC * (pC + 2 * pI + 2 * pT)
   p_mottled <- pI * (pI + 2 * pT)
@@ -484,11 +489,6 @@ other_negloglik <- function(theta, x) {
   -(x[1] * log(p_dark) + x[2] * log(p_mottled) + x[3] * log(p_light))
 }
 
-# x <- c(85, 196, 341)
-# res <- optim(c(1 / 3, 1 / 3), other_negloglik, x = x)
-# theta <- c(res$par, 0)
-# phi <- sum(exp(theta))
-# exp(theta) / phi
 n <- 100
 
 theta1 <- seq(-19, 19, length.out = n)
@@ -506,9 +506,11 @@ pal <- function(n) hcl.colors(n, "viridis", rev = FALSE)
 
 min_z <- min(z)
 
-# levels <- exp(seq(log(min_z), log(3000), length.out = 25))
-
 contour(theta1, theta2, z, col = pal(30), asp = 1, drawlabels = FALSE)
+x1 <- c(2.25, 8.9)
+x2 <- c(-5, 6)
+points(x1, x2, pch = 19)
+lines(x1, x2, lty = "dotted", lwd = 2)
 ```
 ]
 
@@ -516,13 +518,22 @@ contour(theta1, theta2, z, col = pal(30), asp = 1, drawlabels = FALSE)
 
 ### Optimization
 
-- So, we cannot use our existing toolbox. What to do?
+So, we cannot use our existing toolbox. What to do?
+
 --
 
-- We will try two options:
-  - Define **extended-value** function, and use general (zero-order)
-    optimization
-  - Use the barrier method to directly solve the **constrained** optimization problem
+We will try two different options.
+
+#### General Optimization
+
+- Define **extended-value** function, and use general (zero-order)
+  optimization
+
+--
+
+#### Constrained Optimization (Barrier Method)
+
+Use the barrier method to directly solve the **constrained** optimization problem.
 
 ---
 
@@ -540,10 +551,9 @@ We can code a problem-specific (extended-value) version of the negative log-like
 .pull-left[
 ```{r moth-optim-NM}
 x <- c(85, 196, 341)
-optim(
-  c(0.3, 0.3), neg_loglik_pep,
-  x = x
-)
+x0 <- c(1 / 3, 1 / 3)
+
+optim(x0, neg_loglik_pep, x = x)
 ```
 ]
 
@@ -555,7 +565,11 @@ optim(
 Some thought has to go into the initial parameter choice.
 
 ```{r moth-error, error = TRUE, linewidth = 38}
-optim(c(0, 0), neg_loglik_pep, x = x)
+optim(
+  c(0, 0), #<<
+  neg_loglik_pep,
+  x = x
+)
 ```
 ]
 
@@ -564,7 +578,7 @@ optim(c(0, 0), neg_loglik_pep, x = x)
 ### Log-Likelihood Function Factory
 
 `M()` sums the cells that are collapsed,
-which has to be specified by the `group` argument.
+which we specify in `group` argument.
 
 ```{r M-collapse}
 M <- function(y, group) {
@@ -579,6 +593,7 @@ mult_likelihood <- function(x, group, prob, constraint = function(par) TRUE) {
   force(x)
   force(group)
   force(prob)
+
   function(par) {
     pr <- prob(par)
     if (!constraint(par) || any(pr > 1) || any(pr < 0)) {
@@ -594,7 +609,6 @@ mult_likelihood <- function(x, group, prob, constraint = function(par) TRUE) {
 ### Peppered Moths Specifics
 
 Problem-specific functions
-
 
 .pull-left[
 #### Multinomial Probabilities
@@ -642,7 +656,7 @@ constraint <- function(par) {
 
 ```{r moth_likelihood}
 neg_mult_loglik <- mult_likelihood(
-  x = c(85, 196, 341),
+  x = x,
   group = c(1, 1, 1, 2, 2, 3),
   prob = prob,
   constraint = constraint
@@ -655,7 +669,7 @@ neg_mult_loglik <- mult_likelihood(
 .pull-right[
 ```{r moth-optim}
 moth_optim <- optim(
-  c(0.3, 0.3),
+  x0,
   neg_mult_loglik
 )
 moth_optim
@@ -679,7 +693,7 @@ $$\begin{aligned}
 .pull-left[
 into
 $$\begin{aligned}
-       \text{minimize}   &  & tf(x) + \phi(x).
+       \text{minimize}   &  & tf(x) + \phi(x)
   \end{aligned}$$
 with the barrier function $$\phi(z) = -\sum_{i=1}^m \log(-g_i(z)).$$
 ]
@@ -700,7 +714,7 @@ or, in terms of arguments: `ui %*% theta >= ci`.
 --
 
 .pull-left[
-#### Pepper Moths Example
+#### Moths Example
 
 $$A = \begin{bmatrix}1 & 0\\-1 & 0\\0 & 1\\0 & -1\\ -1 & -1\end{bmatrix},
 \quad b = \begin{bmatrix}0\\-1\\0\\-1\\-1\end{bmatrix}.$$
@@ -715,6 +729,10 @@ $$\begin{aligned}&\operatorname*{minimize}_{p} && -\ell(p) \\
 \end{aligned}$$
 with $p = (p_C, p_I)$.
 ]
+
+--
+
+**Not** standard form, but what `constrOptim()` expects.
 
 
 ---
@@ -732,12 +750,12 @@ A <- rbind(
 
 b <- c(0, -1, 0, -1, -1)
 
-constrOptim(c(0.3, 0.3), neg_loglik_pep, NULL, ui = A, ci = b, x = x)$par
+constrOptim(x0, neg_loglik_pep, NULL, ui = A, ci = b, x = x)$par
 ```
 
 --
 
-#### Still Requires Feasible Initial Points
+#### Still Requires Feasible Initial Point
 
 ```{r const-error, error = TRUE, linewidth = 80}
 constrOptim(c(0.0, 0.3), neg_loglik_pep, NULL, ui = A, ci = b, x = x)
@@ -747,17 +765,19 @@ constrOptim(c(0.0, 0.3), neg_loglik_pep, NULL, ui = A, ci = b, x = x)
 
 ### Interior-Point Method
 
-Consists of two phases: I) find a feasible point, II) optimize.
-
 #### Phase I: Initialization
 
 Find a feasible point $x^{(0)}$ by solving the optimization problem
-$$\begin{aligned}&\operatorname*{minimize} && s \\
+$$\begin{aligned}&\operatorname*{minimize}_{(x,s)} && s \\
 &\operatorname*{subject to} && g_i(x) \leq s, & \quad i = 1, \dots, m.\end{aligned}$$
 
 --
 
-If $s^* \leq 0$, then $x^{(0)}$ is feasible.
+If $s^* \leq 0$, then $x^* = x^{(0)}$ is feasible.
+
+--
+
+Easy in the peppered moths case! But this is not always the case.
 
 --
 
@@ -782,9 +802,8 @@ Hence for $k \in A_j$, $$\operatorname{E} (Y_k \mid X = x) = \frac{x_j p_k}{M(p)
 
 --
 
-```{r moth_cond_exp, echo=2:5}
+```{r moth_cond_exp, echo=2:4}
 old_options <- options(digits = 3)
-x <- c(85, 196, 341)
 group <- c(1, 1, 1, 2, 2, 3)
 p <- prob(moth_optim$par)
 x[group] * p / M(p, group)[group]
@@ -798,38 +817,44 @@ options(digits = old_options$digits)
 ### Debugging
 
 - First check traceback and see if error is obvious.
+--
+
 - Use `browser()` or breakpoints to enter debug mode.
+--
+
 - Typically painful, but necessary.
 
 --
 
 ### Multinomial Models and Optimization
 
-* Peppered moths example is simple and the log-likelihood for the observed
+- Peppered moths example is simple and the log-likelihood for the observed
   data can easily be computed.
 --
 
 - Constrained optmimization can be solved using the barrier method.
 --
 
-* `optim()` in R is general interface to optimization methods.
+- `optim()` in R is general interface to optimization methods.
 --
 
-* `constOptim()` is used for linearly constrained optimization.
+- `constOptim()` is used for linearly constrained optimization.
 --
 
 ---
 
-## Exercise: Absolute-Value Constrainets
+## Exercise: Absolute-Value Constraints
 
 Solve the following optimization problem:
 $$\begin{aligned} &\operatorname*{minimize}_{x} && \frac{1}{2}(x - 2)^2 \\
                   &\operatorname{subject to} && |x| \leq 1.\end{aligned}$$
 
-Use `constrOptim()` with `ui` and `ci` arguments to specify the constraints.
+### Steps
 
-If you have time, try implementing the barrier method yourself on top of
-a gradient descent method.
+- First rewrite the problem in standard form.
+- Then use `constrOptim()` with `ui` and `ci` arguments to specify the constraints.
+- If you have time, try implementing the barrier method yourself on top of
+  a gradient descent method.
 
 ```{r exercise-optim, include = FALSE}
 a <- 2
