--- a/lecture10.Rmd
+++ b/lecture10.Rmd
@@ -70,6 +70,7 @@ loglik <- mult_likelihood(
   prob = prob,
   constraint = constraint
 )
+
 moth_optim <- optim(c(0.3, 0.3), loglik)
 ```
 
@@ -89,14 +90,18 @@ $f(\cdot \mid \theta)$ and that $X$ has marginal density $g(x \mid \theta)$.
 --
 
 The marginal density is typically of the form
-$$g(x \mid \theta) = \int_{\{y: M(y) = x\}} f(y \mid \theta) \ \mu_x(\mathrm{d} y)$$
-for a suitable measure $\mu_x$ depending on $M$ and $x$ but not $\theta$.
+$$g(x \mid \theta) = \int f(y \mid \theta)  \mathrm{d} y.$$
 
 --
 
-The log-likelihood for observing $X = x$ is
+If $Y = (X, Z)$, then
+$$g(x \mid \theta) = \int f(x, z \mid \theta) \, \mathrm{d} z = \int f(x \mid z, \theta) h(z \mid \theta) \, \mathrm{d}z.$$
 
-$$\ell(\theta) = \log g(x \mid \theta).$$
+--
+
+### Problem
+
+$g(x \mid \theta)$ typically impossible (or difficult) to compute.
 
 ???
 
@@ -104,21 +109,16 @@ The general argument for the marginal density relies on the coarea formula.
 
 ---
 
-## Incomplete Data Likelihood
+## Conditional Expectation
 
-The marginal likelihood is often
-impossible to compute analytically and difficult and expensive to compute numerically.
-
---
-
-The complete log-likelihood, $\log f(y \mid \theta)$, is often easy to
+The complete log-likelihood, $\log f(y \mid \theta)$, **is** often easy to
 compute, but we don't know $Y$, only that $M(Y) = x$.
 
 --
 
 In some cases it is possible to compute
 
-$$Q(\theta \mid \theta') := E_{\theta'}(\log f(Y \mid \theta) \mid X = x),$$
+$$Q(\theta \mid \theta') := \operatorname{E}_{\theta'}(\log f(Y \mid \theta) \mid X = x),$$
 
 which is the *conditional expectation of the complete log-likelihood given the observed
 data and under the probability measure given by $\theta'$.*
@@ -129,9 +129,9 @@ data and under the probability measure given by $\theta'$.*
 
 ### Idea
 
-With an initial guess of $\theta' = \theta^{(0)}$ compute iteratively
+With an initial guess of $\theta' = \theta^{(n)}$, iteratively compute
 $$\theta^{(n + 1)} = \textrm{arg max} \ Q(\theta \mid \theta^{(n)})$$
- for $n = 0, 1, 2, \ldots$.
+for $n = 0, 1, 2, \ldots$.
 
 --
 
@@ -142,30 +142,38 @@ $$\theta^{(n + 1)} = \textrm{arg max} \ Q(\theta \mid \theta^{(n)})$$
 
 * **M-step**: Maximize $Q(\theta \mid \theta^{(n)})$ in $\theta$.
 
+---
+
+## Ascent Algorithm
+
+It can be shown that
+$$\log g(x \mid \theta) - \log g(x \mid \theta') \geq Q(\theta | \theta') - Q(\theta' \mid \theta)$$
+
 --
 
-### Ascent Algorithm
+In other words, marginal likelihood **weakly** increases in each iteration.
 
-Marginal likelihood is (weakly) increased in each iteration.
+--
+
+If $Q(\theta^{(n+1)} \mid \theta) > Q(\theta^{(n)} \mid \theta)$ then the
+algorithm **strictly** increases the likelihood.
 
 ---
 
 ## Conditional Distributions
 
-It holds in great generality that the conditional distribution of $Y$ given $X = x$ has density
-$$h(y \mid x, \theta) = \frac{f(y \mid \theta)}{g(x \mid \theta)}$$
-w.r.t. a suitable measure $\mu_x$ that does not depend upon $\theta$.
+Often,
+$$h(y \mid x, \theta) = \frac{f(y \mid \theta)}{g(x \mid \theta)}.$$
 
 --
 
 You can verify this for discrete distributions and when
-$Y = (Z, X)$ with joint density w.r.t. a product measure $\mu \otimes \nu$ that does not depend upon $\theta$.
+$Y = (Z, X)$.
 
 --
 
 In the latter case, $f(y \mid \theta) = f(z, x \mid \theta)$ and
-$$g(x \mid \theta) = \int f(z, x \mid \theta) \ \mu(\mathrm{d} z)$$
-is the marginal density w.r.t. $\nu$.
+$$g(x \mid \theta) = \int f(z, x \mid \theta) \ \mathrm{d} z.$$
 
 ---
 
@@ -186,7 +194,7 @@ $$\ell_{\textrm{complete}}(p) = \sum_{i=1}^K Y_i \log(p_i).$$
 --
 
 Thus
-$$Q(p \mid p') = E_{p'}( \ell_{\textrm{complete}}(p) \mid X = x) = \sum_{i=1}^K E_{p'}( Y_i \mid X = x) \log(p_i)$$
+$$Q(p \mid p') = \operatorname{E}_{p'}( \ell_{\textrm{complete}}(p) \mid X = x) = \sum_{i=1}^K \operatorname{E}_{p'}( Y_i \mid X = x) \log(p_i)$$
 for any $X = M(Y)$.
 
 ---
@@ -196,12 +204,12 @@ for any $X = M(Y)$.
 For the multinomial model with $M : \mathbb{N}_0^K \to \mathbb{N}_0^{K_0}$ the
 cell collapsing map corresponding to the partition
 $A_1 \cup \ldots \cup A_{K_0} = \{1, \ldots, K \}$,
-$$E_p (Y_k \mid X = x) = \frac{x_j p_k}{M(p)_j}.$$
+$$\operatorname{E}_p (Y_k \mid X = x) = \frac{x_j p_k}{M(p)_j}.$$
 for $k \in A_j$.
 
 --
 
-The abstract E-step of the EM algorithm can be implemented as
+### Abstract E-Step Implementation
 
 ```{r}
 EStep_mult <- function(p, x, group) {
@@ -215,17 +223,15 @@ EStep_mult <- function(p, x, group) {
 
 With $y = (n_{CC}, n_{CI}, n_{CT}, n_{II}, n_{IT}, n_{TT})^T$ a complete observation,
 it can be shown that the MLE is
-
 \begin{align}
-\hat{p}_C & = (n_{CC} + (n_{CI} + n_{CT}) / 2) / n \\
-\hat{p}_I & = ((n_{CI} + n_{IT}) / 2 + n_{II}) / n
+  \hat{p}_C & = (n_{CC} + (n_{CI} + n_{CT}) / 2) / n \\
+  \hat{p}_I & = ((n_{CI} + n_{IT}) / 2 + n_{II}) / n
 \end{align}
-
 where $n = n_{CC} + n_{CI} + n_{CT} + n_{II} + n_{IT} + n_{TT}$.
 
 --
 
-Which is $\hat{p} = \frac{1}{n} \mathbf{X} y$ for us.
+For us $\hat{p} = \frac{1}{n} \mathbf{X} y$.
 
 .pull-left[
 ```{r x-matrix}
@@ -250,8 +256,7 @@ X
 
 ## Abstract M-Step
 
-The MLE of the complete log-likelihood is a linear estimator in $y / n$,
-and we implement an abstract M-step as any such linear estimator.
+MLE of complete log-likelihood is linear estimator in $y / n$
 
 ```{r mstep-mult}
 MStep_mult <- function(n, X) {
@@ -260,7 +265,7 @@ MStep_mult <- function(n, X) {
 ```
 --
 
-`EStep_mult()` and `MStep_mult()` are abstract implementations. Require
+`EStep_mult()` and `MStep_mult()` are abstract implementations. Requires
 arguments `group` and `X`.
 
 --
@@ -323,30 +328,23 @@ moth_optim$par
 
 ## Inside the EM Algorithm
 
-
 ```{r}
 library(CSwR)
 EM_tracer <- tracer("par")
 EM(c(0.3, 0.3), cb = EM_tracer$tracer)
-```
---
 
-```{r}
 summary(EM_tracer)
 ```
+
+--
 
 ---
 
 ### Tracing the EM Algorithm
 
 ```{r em-tracer}
-EM_tracer <- tracer(c("par0", "par"), N = 0)
+EM_tracer <- tracer(c("par0", "par"), Delta = 0)
 phat <- EM(c(0.3, 0.3), epsilon = 0, cb = EM_tracer$tracer)
-```
-
----
-
-```{r tracer-summary}
 phat
 EM_trace <- summary(EM_tracer)
 tail(EM_trace)
@@ -368,17 +366,103 @@ EM_trace <- transform(
 
 ---
 
+```{r plot-curves, echo = FALSE, warning = FALSE, fig.width = 9, fig.height = 8.5}
+loglik_pep <- Vectorize(function(p1, p2) loglik(c(p1, p2)))
+
+group <- c(1, 1, 1, 2, 2, 3)
+
+EStep <- function(p) EStep_mult(prob(p), x, group)
+MStep <- function(n) MStep_mult(n, X)
+
+epsilon <- 1e-6
+maxit <- 5
+
+exp_vals <- matrix(NA, nrow = maxit, ncol = length(group))
+
+par <- c(0.3, 0.3)
+
+level_curves <- vector("list", length = maxit)
+
+ll <- double(maxit)
+x <- c(85, 196, 341)
+
+n_mat <- 100
+pC <- seq(0, 1, length.out = n_mat)
+pI <- seq(0, 1, length.out = n_mat)
+
+pars <- vector("list", length = maxit)
+
+for (i in seq_len(maxit)) {
+  par0 <- par
+  y <- EStep(par)
+
+  x_new <- M(y, group)
+  z <- matrix(NA, n_mat, n_mat)
+
+  x <- c(85, 196, 341)
+
+  for (k in seq_len(n_mat)) {
+    for (j in seq_len(n_mat)) {
+      # z[k, j] <- neg_loglik_pep(c(pC[k], pI[j]), x)
+      val <- -sum(y * log(prob(c(pC[k], pI[j]))))
+      if (is.finite(val)) {
+        z[k, j] <- val
+      } else {
+        z[k, j] <- -Inf
+      }
+    }
+  }
+
+  level_curves[[i]] <- z
+
+  ll[i] <- -sum(y * log(prob(par)))
+
+  exp_vals[i, ] <- y
+  par <- MStep(y)
+  pars[[i]] <- par
+}
+
+# min_z <- min(sapply(level_curves, min))
+# levels <- exp(seq(log(min_z), log(3000), length.out = 25))
+
+pal <- function(n) hcl.colors(n, "viridis", rev = FALSE)
+
+par_optim <- c(0.07084, 0.18874)
+
+old_par <- par(no.readonly = TRUE)
+
+par(mfrow = c(2, 2), mai = c(0.5, 0.5, 0.1, 0.1))
+for (i in 1:4) {
+  contour(
+    pC,
+    pI,
+    level_curves[[i]],
+    nlevels = 25,
+    col = pal(25),
+    asp = 1,
+    drawlabels = FALSE
+  )
+  text(0.9, 0.9, labels = paste0("k = ", i))
+
+  points(par_optim[1], par_optim[2], pch = 19, col = "dark orange")
+  points(pars[[i]][1], pars[[i]][2], pch = 19)
+}
+par(old_par)
+```
+
+
+---
+
 class: middle
 
-```{r tracer-plot1, echo = FALSE}
+```{r tracer-plot1, echo = FALSE, fig.height = 5.5}
 ggplot(EM_trace, aes(n, par_norm_diff)) +
   geom_point() +
   geom_line() +
   scale_y_log10()
 ```
 
-Note the log-axis. The EM-algorithm converges linearly (this is the terminology,
-see [Algorithms and Convergence](https://cswr.nrhstat.org/7-1-algorithms-and-convergence.html)).
+Note the log-axis. The EM-algorithm converges linearly.
 
 ---
 
@@ -429,8 +513,23 @@ the gradient and Hessian of $Q$ can be useful.
 
 --
 
-For statistics we need the observed Fisher information (Hessian of the negative log-likelihood for the
-observed data).
+For statistics we need the observed Fisher information (Hessian of the negative log-likelihood for the observed data).
+
+---
+
+## Local Maxima
+
+- $Q$ is not typically convex, so no guarantee that
+  the EM-algorithm converges to the global maximum.
+--
+
+- How to deal with this?
+--
+
+- Random starting values.
+--
+
+- Global optimization (e.g. simulated annealing, genetic algorithms).
 
 ---
 
@@ -1013,12 +1112,12 @@ grad2(par_hat)
 
 ### Convergence
 
-```{r tracing-convergence, results = "hide"}
+```{r tracing-convergence}
 library(CSwR)
 
 EM_tracer <- tracer(
   c("par0", "par", "loglik", "h_prime"),
-  N = 0,
+  Delta = 0,
   expr = quote({
     loglik <- loglik(par, x)
     h_prime <- sum(grad2(par)^2)
@@ -1028,6 +1127,7 @@ EM_tracer <- tracer(
 par_hat <- EM(c(0.2, 2, 2), cb = EM_tracer$tracer)
 
 EM_trace <- summary(EM_tracer)
+tail(EM_trace, 4)
 ```
 
 ---
